Let’s see if this works

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,9 +2,9 @@
 <html>
 <head>
   <title> Noah Wells - Web Designer, Developer, Pianist</title>
-  <link href='https://fonts.googleapis.com/css?family=Raleway:400,700'
+  <link href='//fonts.googleapis.com/css?family=Raleway:400,700'
   rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
@@ -15,10 +15,18 @@
     <%= link_to "Noah Wells", root_path, class: "name" %>
     <nav class = "cl-effect-5">
       <%= link_to "Articles", posts_path %>
-      <a href = "#" data-hover="Projects"><span>Projects</span></a>
-      <a href = "contact.html" data-hover="Contact"><span>Contact</span></a>
+      <%= link_to "Projects", projects_path %>
+      <a href="mailto:noah16077@yahoo.com" data-hover="Contact"><span>Contact</span></a>
+      <% if user_signed_in? %>
+        <%= link_to "Sign Out", destroy_user_session_path, method: :delete %>
+      <% end %>
     </nav>
   </header>
+
+  <% if notice %>
+    <p class="notice"><%= notice %></p>
+    <p class="alert"><%= alert %></p>
+  <% end %>
 
 <%= yield %>
 
