--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -21,9 +21,9 @@
     <div class = "col-3 homepage_content">
       <h2>Websites I've Built</h2>
       <hr>
-      <h3><a href = "#">Lorem Ipsum Dolor</a></h3>
-      <p class = "date">Friday April 10th</p>
-      <h3><a href = "#">Sit Amet</h3>
-      <p class = "date">Friday April 10th</p>
+      <% @projects.each do |project| %>
+        <h3><a href = "#"><%= link_to project.title, project %></a></h3>
+        <p class="date"><%= project.created_at.strftime("%A, %b %d") %></p>
+      <% end %>
     </div>
   </div>
