--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -14,6 +14,11 @@ $border-color: #e9e9e9;
     box-sizing: border-box;
 }
 
+.notice, ,alert {
+  text-align: center;
+  padding: 1em 0;
+  border-bottom: 1px solid #e9e9e9;
+}
  *  {
    box-sizing: border-box; // The padding that we had added doesn't add to the width of each column, but is still calculated
  }
@@ -44,6 +49,10 @@ body {
 
 .clearfix:after{
   clear: both;
+}
+
+.hidden {
+  display: none;
 }
 
 hr {
@@ -181,6 +190,18 @@ input[type="submit"], .button {
     border: 2px solid $highlight;
     color: $highlight;
   }
+}
+
+.project_button {
+  background: $highlight;
+  color: $white;
+  text-decoration: none;
+  padding: 1em 2em;
+}
+
+.button_wrapper {
+  margin: 4em 0 0 0;
+  text-align: center;
 }
 #main_navigation{
 
