--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,1 +1,13 @@
-<h1>Hello World!</h1>
+<h1 id = "page_title">Articles I've Written</h1>
+
+    <div id = "posts_wrapper" class = "skinny_wrapper">
+      <% @posts.each do |post| %>
+        <div class = "post">
+          <p class = "date"><%= post.created_at.strftime('%A, %B %d') %></p>
+          <h2><a href = "#"></a><%= link_to post.title, post %></h2>
+          <hr>
+        </div>
+      <% end %>
+    </div>
+
+  <%= will_paginate @posts %>
