--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,5 +1,6 @@
 <div id ="post_show_content" class = "skinny_wrapper" class = "wrapper_padding">
       <header>
+        <br><br><br><br>
         <p class = "date"><%= @post.created_at.strftime('%A, %b %d') %></p>
         <h1><%= @post.title %></h1>
         <hr>
@@ -8,16 +9,23 @@
       <div id="content">
         <%= markdown @post.content %>
       </div>
+
+      <% if user_signed_in? %>
+        <div id="admin_links">
+          <%= link_to "Edit Article", edit_post_path(@post) %>
+          <%= link_to "Delete Article", post_path(@post), method: :delete, data: {conform: "Are you sure?"}
+          %>
+        </div>
+      <% end %>
       <hr>
       <div id = "share_box">
-        <p>Share It was Passepartout</p>
+        <p>Share <%= @post.title %></p>
         <a onclick="javascript:window.open('http://twitter.com/share?text=<%= @post.title %> by @noah16077 - &amp;url=<%= url_for([@post, {only_path: false}]) %>', '_blank', 'width=800, height=500, top=200, left=300');void(0);">
           <i class = "fa fa-twitter"></i>
         <a onclick="javascript:window.open('http://facebook.com/sharer.php?u=<%= url_for([@post, {only_path: false}]) %>', '_blank', 'width=800, height=500, top=200, left=300');void(0);">
           <i class="fa fa-facebook"></i></a>
         </div>
-
       <hr>
-    </div>
 
-    <%= link_to "Edit", edit_post_path(@post) %>
+      <%= render 'disqus' %>
+    </div>
